[package]
name = "mockforge-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP/REST protocol support for MockForge"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["http", "rest", "api", "mock", "testing"]
categories = ["development-tools::testing", "web-programming::http-server"]

[lints.rust]
missing_docs = "deny"

[dependencies]
axum = { workspace = true }
http = "1.3"
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
mockforge-smtp = { version = "0.3.70", path = "../mockforge-smtp", optional = true }
async-trait = { workspace = true }
glob = { workspace = true }
globwalk = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
json-patch = { workspace = true }
jsonpath = "0.1"
roxmltree = "0.21"
anyhow = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
mime_guess = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
ring = { workspace = true }
governor = "0.8"
mockforge-core = { version = "0.3.70", path = "../mockforge-core" }
mockforge-contracts = { path = "../mockforge-contracts" }
mockforge-foundation = { path = "../mockforge-foundation" }
mockforge-intelligence = { path = "../mockforge-intelligence" }
mockforge-import = { path = "../mockforge-import" }
mockforge-openapi = { path = "../mockforge-openapi" }
mockforge-proxy = { path = "../mockforge-proxy" }
mockforge-data = { version = "0.3.70", path = "../mockforge-data" }
mockforge-observability = { version = "0.3.70", path = "../mockforge-observability" }
mockforge-analytics = { version = "0.3.70", path = "../mockforge-analytics" }
mockforge-recorder = { version = "0.3.70", path = "../mockforge-recorder" }
mockforge-scenarios = { version = "0.3.70", path = "../mockforge-scenarios", optional = true }
mockforge-tracing = { version = "0.3.70", path = "../mockforge-tracing" }
opentelemetry = { version = "0.22", features = ["trace"] }
mockforge-mqtt = { version = "0.3.70", path = "../mockforge-mqtt", optional = true }
mockforge-chaos = { version = "0.3.70", path = "../mockforge-chaos" }
mockforge-performance = { version = "0.3.70", path = "../mockforge-performance", optional = true }
mockforge-world-state = { version = "0.3.95", path = "../mockforge-world-state", optional = true }
mockforge-template-expansion = { version = "0.3.70", path = "../mockforge-template-expansion" }
mockforge-route-chaos = { version = "0.3.70", path = "../mockforge-route-chaos", optional = true }
futures-util = "0.3"
rustls = "0.23"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"], optional = true }
dashmap = { version = "6.2", optional = true }
mockforge-pipelines = { version = "0.3.70", path = "../mockforge-pipelines", optional = true }
mockforge-runtime-daemon = { version = "0.3.95", path = "../mockforge-runtime-daemon", optional = true }
mockforge-kafka = { version = "0.3.70", path = "../mockforge-kafka", optional = true }
mockforge-amqp = { version = "0.3.70", path = "../mockforge-amqp", optional = true }
mockforge-bench = { version = "0.3.70", path = "../mockforge-bench", optional = true }

[features]
default = ["chaos-engine", "performance-profiling", "world-state", "route-chaos", "scenario-engine"]
# Chaos engineering handlers and middleware
chaos-engine = []
# Performance profiling handlers
performance-profiling = ["mockforge-performance"]
# World state graph engine
world-state = ["mockforge-world-state"]
# Per-route chaos injection
route-chaos = ["mockforge-route-chaos"]
# Scenario/state machine engine
scenario-engine = ["mockforge-scenarios"]
# Enable richer faker-backed tokens in templating via mockforge-data.
# Under #656 the `management::ai_gen::generate_ai_spec` handler moved
# to `mockforge-intelligence::handlers::spec_generation`, so this flag
# now propagates to intelligence to keep the dual data-faker / stub-503
# contract on a single toggle.
data-faker = ["mockforge-intelligence/data-faker"]
# Database-backed analytics/forecasting handlers.
# Under Issue #555 the `Database` wrapper itself moved to
# `mockforge-intelligence::database`; this re-export shim crate keeps
# the same `mockforge_http::database::Database` import path working.
database = ["sqlx", "mockforge-intelligence/database"]
# Pipeline handler routes
pipelines = ["mockforge-pipelines", "dashmap"]
# Persona graph response enrichment
persona-graph = []
# Behavioral cloning middleware and handlers
behavioral-cloning = []
# Runtime daemon integration hooks
runtime-daemon = ["mockforge-runtime-daemon"]
# Enable SMTP support
smtp = ["mockforge-smtp"]
# Enable MQTT integration
mqtt = ["mockforge-mqtt"]
# Enable conformance testing API endpoints
conformance = ["mockforge-bench", "dashmap"]
# Enable Kafka integration (broker admin API + UI live data)
kafka = ["mockforge-kafka"]
# Enable AMQP integration (broker admin API + UI live data)
amqp = ["mockforge-amqp"]
# Enable chaos engineering API management (mockforge-chaos is always included)
chaos = []

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
reqwest = { workspace = true }
tempfile = "3"
tokio-tungstenite = "0.28"
futures-util = "0.3"
mockforge-ws = { version = "0.3.70", path = "../mockforge-ws" }
mockforge-plugin-core = { version = "0.3.70", path = "../mockforge-plugin-core" }
opentelemetry_sdk = "0.22"
uuid = { version = "1.23", features = ["v4"] }
once_cell = { workspace = true }
