[package]
name = "mockforge-mqtt"
version = "0.3.25"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MQTT protocol support for MockForge"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["mqtt", "iot", "pubsub", "mock", "testing"]
categories = ["development-tools::testing", "network-programming"]

[dependencies]
mockforge-core = { version = "0.3.25", path = "../mockforge-core" }
tokio = { workspace = true, features = ["net", "io-util"] }
rumqttc = "0.25"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
regex = "1.10"
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
uuid = { version = "1.11", features = ["v4"] }

# TLS support
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
